--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -1,1 +1,11 @@
 {{image-loader}}
+
+<div class="row">
+  <div class="col-12">
+    <small>
+      Made with <span role="img" aria-label="love">❤️</span> by <a href='https://mattboldt.com/?utm_source=michaelscottgifs.com'>Matt Boldt</a> |
+
+      Contribute on <a href="https://github.com/mattboldt/michaelscottgifs">GitHub</a>
+    </small>
+  </div>
+</div>
