fix image sizing

--- a/www/app/styles/app.scss
+++ b/www/app/styles/app.scss
@@ -46,7 +46,8 @@ input:focus {
 img {
   display: block;
   margin: auto;
-  max-width: 100%;
+  width: 100%;
+  max-width: 550px;
 }
 
 .image-tag{
