--- a/www/app/templates/components/image-loader.hbs
+++ b/www/app/templates/components/image-loader.hbs
@@ -15,7 +15,7 @@
 {{#each images as |image|}}
   <div class="row">
     <div class="col-12">
-      <img src={{image.url}} width="550" />
+      <img src={{image.url}} />
     </div>
   </div>
   <div class="row">
