--- a/www/app/styles/_simple-grid.scss
+++ b/www/app/styles/_simple-grid.scss
@@ -1,9 +1,7 @@
 // SIMPLE GRID - SASS/SCSS
 
-@import url(https://fonts.googleapis.com/css?family=Lato:400,300,300italic,400italic,700,700italic);
-
 // fonts
-$font-family: 'Lato', Helvetica, sans-serif;
+$font-family: 'Courier', monospace;
 $font-weight-light: 300;
 $font-weight-regular: 400;
 $font-weight-heavy: 700;
