added query params and metadata

--- a/www/app/templates/components/image-loader.hbs
+++ b/www/app/templates/components/image-loader.hbs
@@ -25,3 +25,18 @@
     </div>
   </div>
 {{/each}}
+
+
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "BlogPosting",
+  "headline": "{{pageTitle}}",
+  "image": {
+    "@type": "ImageObject",
+    "url": "{{pageImageUrl}}",
+    "width": 250,
+    "height": 200
+  }
+}
+</script>
