--- a/www/app/templates/components/image-loader.hbs
+++ b/www/app/templates/components/image-loader.hbs
@@ -7,10 +7,6 @@
   </div>
 </div>
 
-<div>
-
-</div>
-
 {{#each images as |image|}}
   <div class="row">
     <div class="col-12">
@@ -24,3 +20,5 @@
     </div>
   </div>
 {{/each}}
+
+{{title pageTitle}}
