--- a/www/app/templates/components/image-loader.hbs
+++ b/www/app/templates/components/image-loader.hbs
@@ -2,7 +2,12 @@
 
 <div class="row">
   <div class="col-9">
-    {{input value=searchQuery insert-newline="search" class="search" placeholder="Michael Scott Search"}}
+    {{input
+      value=searchQuery
+      insert-newline="search"
+      class="search"
+      placeholder="Michael Scott Search"
+      autofocus=true}}
   </div>
   <div class="col-3">
     <button class="btn" {{action "search"}}>search</button>
