got the node server to work

--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -1,5 +1,6 @@
-{{image-loader images=images query=q}}
+{{title pageTitle}}
 
+{{image-loader model=model q=q}}
 <div class="row">
   <div class="col-12">
     <small>
