--- a/www/app/templates/components/image-loader.hbs
+++ b/www/app/templates/components/image-loader.hbs
@@ -1,5 +1,3 @@
-{{title pageTitle}}
-
 <div class="row">
   <div class="col-9">
     {{input
@@ -14,7 +12,7 @@
   </div>
 </div>
 
-{{#each images as |image|}}
+{{#each model as |image|}}
   <div class="row">
     <div class="col-12">
       <video frameborder="0" autoplay loop>
