--- a/www/app/templates/components/image-loader.hbs
+++ b/www/app/templates/components/image-loader.hbs
@@ -28,7 +28,7 @@
   </div>
 {{/each}}
 
-{{#unless images}}
+{{#unless model}}
   <div class="row">
     <div class="col-12">
       <div class="spinner">
