upgraded ember. Fixed input focus

--- a/www/app/templates/components/image-loader.hbs
+++ b/www/app/templates/components/image-loader.hbs
@@ -5,6 +5,7 @@
       insert-newline="search"
       class="search"
       placeholder="Michael Scott Search"
+      name="search-bar"
       autofocus=true}}
   </div>
   <div class="col-3">
